# MENU_LIB

./: README.md  ReadMe.md  mkdocs.yml
.github/workflows/: mkdocs-deploy.yml
docs/: CONTRIBUTING.md  api_reference.md  architecture.md  geting_started.md  getting_started.md  menu_generator.md
docs/doxygen/: Doxyfile
examples/getting_started_example_1/hw/STM32G070RB/: CMakeLists.txt
examples/getting_started_example_1/hw/STM32G070RB/Core/Src/: core_init.c  lcd_hd44780_GPIO_interface.c  main.c  pushbutton_GPIO_interface.c  stm32g0xx_it.c  system_stm32g0xx.c
examples/getting_started_example_1/hw/STM32G070RB_HAL_LL/: .cproject  .mxproject  .project  CMakeLists.txt  STM32G070RBTX_FLASH.ld  STM32G070RB_HAL_LL.ioc
examples/getting_started_example_1/hw/STM32G070RB_HAL_LL/Core/Inc/: main.h
examples/getting_started_example_1/hw/STM32G070RB_HAL_LL/Core/Src/: lcd_hd44780_GPIO_interface.c  main.c  pushbutton_GPIO_interface.c  stm32g0xx_it.c  syscalls.c
examples/getting_started_example_1/hw/STM32G071RB/: CMakeLists.txt
examples/getting_started_example_1/hw/STM32G071RB/Core/Src/: lcd_hd44780_GPIO_interface.c  main.c  pushbutton_GPIO_interface.c
examples/getting_started_example_1/lib/LCD_HD44780/: CMakeLists.txt  lcd_hd44780.h  lcd_hd44780_config.h
examples/getting_started_example_1/lib/MENU_LIB/: CMakeLists.txt
examples/getting_started_example_1/lib/PUSHBUTTON_SWITCH_LIB/: CMakeLists.txt  pushbutton_GPIO_interface.h
examples/getting_started_example_1/src/: main_app.c  main_app.h
examples/getting_started_example_1/src/ui/: keypad.c  keypad.h  menu.c  menu.h  menu_handlers.c  menu_handlers.h  menu_screen_driver_interface.c  ui.c  ui.h
lib/MENU_LIB/: menu_lib.c  menu_lib.h  menu_lib_type.h
test/MENU_LIB/: menu_lib_init_test.c  menu_lib_test_runner.c  mock_menu_screen_driver_interface.h
test/_config_scripts/CI/: CI.py  config.yaml
